--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ am the creator of:<o:p></o:p></span></p>
  <li class=MsoNormal style='mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
      style='font-size:11.0pt;mso-bidi-font-size:12.0pt'>StefSploit<o:p></o:p></span></li>
  <li class=MsoNormal style='mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
-     style='font-size:11.0pt;mso-bidi-font-size:12.0pt'>Stefan’s Web Browser!<o:p></o:p></span></li>
+     style='font-size:11.0pt;mso-bidi-font-size:12.0pt'>Stefanâ€™s Web Browser!<o:p></o:p></span></li>
  <li class=MsoNormal style='mso-list:l0 level1 lfo1;tab-stops:list .5in'><span
      style='font-size:11.0pt;mso-bidi-font-size:12.0pt'>The Graduation Video
      website (gradvideo.github.io)<o:p></o:p></span></li>
